# yolov4-triton-tensorrt

./: CMakeLists.txt  LICENSE  main.cpp  version.h
layers/: yolo416layer.cu  yolo416layer.h  yolo608layer.cu  yolo608layer.h
networks/: yolov4.h
